--- a/media.css
+++ b/media.css
@@ -13,7 +13,11 @@
         font-weight: 400px;
         padding: 20px;
     }
-    .hero button{
+    .hero button a{
+        text-decoration: none;
+        color: #fff;
+    }
+    .hero button {
             margin: 0 20px;
             background-color: #d17c5f;
             color: #fff;
