--- a/media.css
+++ b/media.css
@@ -172,6 +172,10 @@
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
+.contact-form .btn a{
+    text-decoration: none;
+    color: white;
+}
   .contact-form button:hover {
     background-color: #ba6c51;
     transform: translateY(-2px);
@@ -181,6 +185,7 @@
     background-color: #25D366;
     width: 100%;
   }
+
   .contact-form .btn:hover {
     background-color: #128C7E;
     transform: translateY(-2px);
