--- a/media.css
+++ b/media.css
@@ -172,7 +172,34 @@
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
+.contact-form .btnf{
+    background-color: #1877F2;
+    padding: 10px;
+    margin: 5px 0;
+    border: .1px solid transparent;
+    border-radius: 10px;
+    justify-items: flex-start;
+    color: white;
+    display: inline;
+    width: 100%;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    box-shadow: 0 8px 16px rgba(209, 124, 95, 0.3);
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+.contact-form .btnf:hover {
+    background-color: #0B59D3;
+    transform: translateY(-2px);
+    box-shadow: 0 12px 24px rgba(186, 108, 81, 0.35);
+  }
 .contact-form .btn a{
+    text-decoration: none;
+    color: white;
+}
+.contact-form .btnf a{
     text-decoration: none;
     color: white;
 }
